--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -75,11 +75,12 @@
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>订单管理</span></a>
                     <ul class="sub-menu-list">
                         <!--<li><a href="blank_page.html"> 订单列表</a></li>-->
-                        <li><a href="{:url('admin/busorder/unOrder')}"> 待处理订单</a></li>
+                        <!--<li><a href="{:url('admin/busorder/unOrder')}"> 待处理订单</a></li>-->
                         <li><a href="{:url('admin/busorder/unDiliver')}"> 待发货订单</a></li>
                         <li><a href="{:url('admin/busorder/diliver')}"> 已发货订单</a></li>
                         <li><a href="{:url('admin/busorder/done')}"> 已完成订单</a></li>
                         <li><a href="{:url('admin/busorder/cancel')}"> 被取消订单</a></li>
+                        <!--<li><a href="{:url('admin/busorder/showdetail')}"> 用户详情</a></li>-->
                     </ul>
                 </li>
 
